# iloader

./: README.md  package.json
.github/workflows/: build.yml
src/: App.css  App.tsx  Device.tsx  Modal.css  Modal.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: operations.ts
src/pages/: AppleID.css  AppleID.tsx  Settings.tsx
